k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nba-backend-service
spec:
  selector:
    app: nba-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
